--- a/index.ejs
+++ b/index.ejs
@@ -5,20 +5,7 @@
   <meta http-equiv="content-type" 
     content="text/html; charset=UTF-8">
   <title><%=title %></title>
-  <style>
-    h1 {
-      font-size: 60pt;
-      color: #eee;
-      text-align: right;
-      margin: 0px;
-    }
-
-    body {
-      font-size: 14pt;
-      color: #999;
-      margin: 5px;
-    }
-  </style>
+  <link type="text/css" href="./style.css" rel="stylesheet">
 </head>
 
 <body>
