--- a/index.ejs
+++ b/index.ejs
@@ -9,21 +9,19 @@
   rel="stylesheet" crossorigin="anonymous">
 </head>
 
-<body class="container">
-    <header>
-        <h1 class="display-4"><%=title %></h1>
-    </header>
-    <div role="main">
-        <p><%=content %></p>
-        <table class="table">
-            <% for(var key in data) { %>
-            <tr>
-                <th><%= key %></th>
-                <td><%= data[key] %></td>
-            </tr>
-            <% } %>
-        </table>
-    </div>
- </body>
+<<body class="container">
+  <header>
+    <h1 class="display-4"><%=title %></h1>
+  </header>
+  <div role="main">
+    <p><%=content %></p>
+    <% var id = 0; %>
+    <% for(var key in data) { %>
+    <%- include('data_item', 
+          {id:++id, key:key, val:[data[key]]}) %>
+    <% } %>
+  </div>
+</body>
+
 
 </html>
