--- a/index.ejs
+++ b/index.ejs
@@ -23,6 +23,7 @@
         <td><%=data.msg %></td>
       </tr>
     </table>
+    <p>your last message:<%= cookie_data %></p>
     <form method="post" action="/">
       <div class="form-group">
         <label for="msg">MESSAGE</label>
@@ -31,7 +32,6 @@
       </div>
       <input type="submit" value="送信" 
         class="btn btn-primary">
-    </form>
   </div>
 </body>
 
